newsfeed element: hide username; avoid overflow on narrow screens by allowing wrapping

--- a/conf/test.dev.finto.fi/css/toots.css
+++ b/conf/test.dev.finto.fi/css/toots.css
@@ -41,9 +41,7 @@
 }
 
 .toot .username {
-  display: block;
-  margin-right: 1em;
-  color: var(--muted-color);
+  display: none;
 }
 
 /* Boosting user is smaller and above the posting user. */
@@ -67,7 +65,6 @@
   grid-row: 1;
   justify-self: end;
   align-self: center;
-  white-space: nowrap;
   color: var(--muted-color);
   text-decoration: none;
 }
@@ -80,6 +77,8 @@
   margin-top: 1em;
   grid-column: 1 / 3;
   grid-row: 2;
+  overflow-wrap: anywhere;
+  word-break: break-word;
 }
 
 .toot .body a {
